--- a/PalmRent.FrontWeb/Views/Main/Index.cshtml
+++ b/PalmRent.FrontWeb/Views/Main/Index.cshtml
@@ -1,14 +1,14 @@
-﻿
+﻿@model PalmRent.DTO.CityDTO[]
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div id="divCities" style="display:none;position:absolute;z-index:100;background-color:lightblue;cursor:pointer">
     <ul id="ulCities">
-        @*@foreach (var city in Model)
+        @foreach (var city in Model)
         {
             <li cityId="@city.Id">@city.Name</li>
-        }*@
+        }
     </ul>
 </div>
 
