--- a/PalmRent.FrontWeb/Views/House/Search2.cshtml
+++ b/PalmRent.FrontWeb/Views/House/Search2.cshtml
@@ -109,7 +109,7 @@
     <script id="housesList" type="text/html">
         {{each houses as h}}
         <div class="list clearfloat fl box-s">
-            <a href="/{{h.id}}.html">
+            <a href="/House/Index/{{h.id}}">
                 <!--<a href="/House/Index/{{h.id}}">-->
                 <div class="tu clearfloat">
                     <span></span>
